// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Input component disabled snapshot test for Input component disabled 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    className="formInput"
  >
    <WithStyles(ForwardRef(InputLabel))
      aria-labelledby="Input"
      aria-required={false}
      htmlFor="input"
      shrink={true}
      style={
        Object {
          "color": "var(--Darkgray)",
        }
      }
    >
      <b>
        INPUT
      </b>
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(InputBase))
      aria-required={false}
      autoComplete="new-password"
      disabled={true}
      error={false}
      id="input"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;

exports[`renders the Input component error and helpertext snapshot test for Input component with error and helpertext 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    className="formInput"
  >
    <WithStyles(ForwardRef(InputLabel))
      aria-labelledby="Input"
      aria-required={false}
      htmlFor="input"
      shrink={true}
      style={
        Object {
          "color": "var(--Darkgray)",
        }
      }
    >
      <b>
        INPUT
      </b>
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(InputBase))
      aria-required={false}
      autoComplete="new-password"
      disabled={false}
      error={true}
      id="input"
      style={
        Object {
          "width": "100%",
        }
      }
    />
    <WithStyles(ForwardRef(FormHelperText))
      error={true}
    >
      Error
    </WithStyles(ForwardRef(FormHelperText))>
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;

exports[`renders the Input component required snapshot test for Input component required 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    className="formInput"
  >
    <WithStyles(ForwardRef(InputLabel))
      aria-labelledby="Input"
      aria-required={true}
      htmlFor="input"
      shrink={true}
      style={
        Object {
          "color": "var(--Darkgray)",
        }
      }
    >
      <b>
        INPUT
        <span
          className="super"
        >
          *
        </span>
      </b>
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(InputBase))
      aria-required={true}
      autoComplete="new-password"
      disabled={false}
      error={false}
      id="input"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;

exports[`renders the Input component with helpertext snapshot test for Input component with helpertext 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    className="formInput"
  >
    <WithStyles(ForwardRef(InputLabel))
      aria-labelledby="Input"
      aria-required={false}
      htmlFor="input"
      shrink={true}
      style={
        Object {
          "color": "var(--Darkgray)",
        }
      }
    >
      <b>
        INPUT
      </b>
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(InputBase))
      aria-required={false}
      autoComplete="new-password"
      disabled={false}
      error={false}
      id="input"
      style={
        Object {
          "width": "100%",
        }
      }
    />
    <WithStyles(ForwardRef(FormHelperText))
      error={false}
    >
      Message
    </WithStyles(ForwardRef(FormHelperText))>
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;

exports[`renders the default Input component snapshot test for default Input 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    className="formInput"
  >
    <WithStyles(ForwardRef(InputLabel))
      aria-labelledby="Input"
      aria-required={false}
      htmlFor="input"
      shrink={true}
      style={
        Object {
          "color": "var(--Darkgray)",
        }
      }
    >
      <b>
        INPUT
      </b>
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(InputBase))
      aria-required={false}
      autoComplete="new-password"
      disabled={false}
      error={false}
      id="input"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;
